GNOME Bugzilla – Bug 701253
rtsp-session-pool: session timeout detection is broken
Last modified: 2014-02-25 22:28:20 UTC
Created attachment 245618 [details] [review] corrected session timeout detection Currently the monotonic time value (g_source_get_time) is sent to the gst_rtsp_session_next_timeout function.
commit aa50aac669c4a5567ffd37bd08ab251039a4f018 Author: Patricia Muscalu <patricia@axis.com> Date: Thu May 30 10:46:33 2013 +0200 rtsp-session-pool: corrected session timeout detection Fixes https://bugzilla.gnome.org/show_bug.cgi?id=701253