rtsp-session-pool: corrected session timeout detection

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=701253